Adjust some gaps between card sections and fix the github pages relative paths

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -7,7 +7,7 @@ section.info-card {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1.2rem;
   box-sizing: border-box;
 }
 section.info-card img {
